# CS564

./: README.md  Relational_Schema.docx
p1/: .~lock.Relational_Schema.docx#  AuctionBase  README.md  create.sql  load.txt  parser.py  query2.sql  query3.sql  query4.sql  query5.sql  query6.sql  query7.sql  runParser.sh
p1/backup/: skeleton_parser.py
p1/dataloader/: parser.py  plan.txt  runParser.sh  skeleton_parser.py
p1/ebay_data/: skeleton_parser.py
p1/parsed_data/: parser.py  runParser.sh
p1/schema/: Relational_Schema.docx
p1/submit/: load.txt  query3.sql  query5.sql
p2/: .~lock.pp2.pdf#
p2/BufMgr/src/: badgerdb_main  buffer.cpp  buffer.h  main.cpp  test.1  test.5
p2/BufMgr/submission/: buffer.cpp  buffer.h  main.cpp
p3/: CMakeLists.txt  README.md
p3/Btree/: design_report.md  outline.txt
p3/Btree/docs/: bad__buffer__exception_8cpp_source.html  bad__buffer__exception_8h_source.html  bad__index__info__exception_8cpp_source.html  bad__index__info__exception_8h_source.html  bad__opcodes__exception_8cpp_source.html  bad__opcodes__exception_8h_source.html  bad__scan__param__exception_8cpp_source.html  bad__scan__param__exception_8h_source.html  bad__scanrange__exception_8cpp_source.html  bad__scanrange__exception_8h_source.html  badgerdb__exception_8cpp_source.html  badgerdb__exception_8h_source.html  btree_8cpp_source.html  btree_8h_source.html  buf_hash_tbl_8cpp_source.html  buf_hash_tbl_8h_source.html  buffer_8cpp_source.html  buffer_8h_source.html  buffer__exceeded__exception_8cpp_source.html  buffer__exceeded__exception_8h_source.html  classbadgerdb_1_1_b_tree_index.html  classbadgerdb_1_1_bad_buffer_exception.html  classbadgerdb_1_1_bad_index_info_exception.html  classbadgerdb_1_1_bad_opcodes_exception.html  classbadgerdb_1_1_bad_scan_param_exception.html  classbadgerdb_1_1_bad_scanrange_exception.html  classbadgerdb_1_1_badger_db_exception.html  classbadgerdb_1_1_blob_file.html  classbadgerdb_1_1_buf_desc.html  classbadgerdb_1_1_buf_hash_tbl.html  classbadgerdb_1_1_buf_mgr.html  classbadgerdb_1_1_buffer_exceeded_exception.html  classbadgerdb_1_1_end_of_file_exception.html  classbadgerdb_1_1_file.html  classbadgerdb_1_1_file_exists_exception.html  classbadgerdb_1_1_file_iterator.html  classbadgerdb_1_1_file_not_found_exception.html  classbadgerdb_1_1_file_open_exception.html  classbadgerdb_1_1_file_scan.html  classbadgerdb_1_1_hash_already_present_exception.html  (+81 more)
p3/Btree/src/: badgerdb_main  btree.cpp  btree.h  buffer.cpp  main.cpp  relA.0
p3/submission/: outline.txt
